--- a/build.gradle
+++ b/build.gradle
@@ -37,10 +37,16 @@ dependencies {
     implementation 'mysql:mysql-connector-java:8.0.21'
     implementation 'com.github.pagehelper:pagehelper-spring-boot-starter:1.3.0'
     implementation 'org.apache.httpcomponents:httpclient:4.5.12'
+    implementation 'com.alibaba:easyexcel:2.2.6'
+    implementation 'com.alibaba:fastjson:1.2.73'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:2.2.5.RELEASE'
+    compile group: 'com.github.xiaoymin', name: 'knife4j-spring-boot-starter', version: '2.0.4'
+
     testImplementation "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
 
     annotationProcessor 'org.projectlombok:lombok:1.18.2'
     compileOnly 'org.projectlombok:lombok:1.18.2'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.2'
     testCompileOnly 'org.projectlombok:lombok:1.18.2'
+    implementation 'org.apache.commons:commons-lang3:3.11'
 }
