--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ test.enabled(false)
 testClasses.enabled(false)
 
 dependencies {
-    implementation "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
+    implementation "org.springframework.boot:spring-boot-starter-web"
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.3'
     implementation 'mysql:mysql-connector-java:8.0.21'
     implementation 'com.github.pagehelper:pagehelper-spring-boot-starter:1.3.0'
@@ -40,9 +40,12 @@ dependencies {
     implementation 'com.alibaba:easyexcel:2.2.6'
     implementation 'com.alibaba:fastjson:1.2.73'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:2.2.5.RELEASE'
-    compile group: 'com.github.xiaoymin', name: 'knife4j-spring-boot-starter', version: '2.0.4'
+    implementation 'com.github.xiaoymin:knife4j-spring-boot-starter:2.0.4'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 
-    testImplementation "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
+    implementation 'com.janeluo:ikanalyzer:2012_u6'
+
+    testImplementation "org.springframework.boot:spring-boot-starter-test"
 
     annotationProcessor 'org.projectlombok:lombok:1.18.2'
     compileOnly 'org.projectlombok:lombok:1.18.2'
