--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,10 @@ spring:
     url: jdbc:mysql:///test?useUnicode=yes&characterEncoding=UTF8&useSSL=false&allowMultiQueries=true&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
     username: root
     password: root
-
+  redis:
+    host: localhost
+    port: 6379
+    password: 123456
 logging.level.com.test.mybatis.mapper: debug
 mybatis:
   configuration:
